manifest/envs/dev/resources/regalia-auth.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: regalia-preview-auth
  namespace: oauth2-proxy
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: scoreserver
  to:
  - group: ''
    kind: Service
    name: regalia-auth
